--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,9 +11,9 @@
 <body>
     <header>
         <nav>
-            <a href="/main" class="nav-links">Home</a>
+            <a href="/" class="nav-links">Home</a>
             <a href="" class="nav-links">Dashboard</a>
-            <a href="" class="nav-links">Login</a>
+            <a href="/login" class="nav-links">Login</a>
         </nav>
         <h1>Tech Blog</h1>
     </header>
