able to login and logout tracking the sessions and redirect to the appropriate pages based on the session

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
             <a href="/" class="nav-links">Home</a>
             <a href="" class="nav-links">Dashboard</a>
             <a href="/login" class="nav-links">Login</a>
+            <a href="" class="nav-links" id="logout">Logout</a>
         </nav>
         <h1>Tech Blog</h1>
     </header>
@@ -21,6 +22,8 @@
     <main>
         {{{ body }}}
     </main>
+
+    <script src="/javascript/logout.js"></script>
 
 </body>
 
