--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,23 @@
-<form class="form">
-     <div class="title">
-        Sign Up
-    </div>
-    <div class="form-content">
-        <div>
-            <label for="username-signup">Username</label>
-            <input type="text" id="username-signup" />
+<form class="signup-form">
+    <div class="form">
+        <div class="title">
+            Sign Up
         </div>
-        <div>
-            <label for="password-signup">Password</label>
-            <input type="password" id="password-signup" />
-        </div>
-        <div>
-            <button type="submit">Sign up!</button>
-        </div>
-        <div>
-            <a href="/login">Login instead</a>
+        <div class="form-content">
+            <div>
+                <label for="username-signup">Username</label>
+                <input type="text" id="username-signup" />
+            </div>
+            <div>
+                <label for="password-signup">Password</label>
+                <input type="password" id="password-signup" />
+            </div>
+            <div>
+                <button type="submit">Sign up!</button>
+            </div>
+            <div>
+                <a href="/login">Login instead</a>
+            </div>
         </div>
     </div>
 </form>
