--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,25 @@
-<form class="form">
-    <div class="title">
-        Login In
-    </div>
-    <div class="form-content">
-        <div>
-            <label for="username-login">Username</label>
-            <input type="text" id="email-login" />
+<form class="login-form">
+    <div class="form">
+        <div class="title">
+            Login In
         </div>
-        <div>
-            <label for="password-login">Password</label>
-            <input type="password" id="password-login" />
-        </div>
-        <div>
-            <button type="submit">Login!</button>
-        </div>
-        <div>
-            <a href="/signup">Sign up instead</a>
+        <div class="form-content">
+            <div>
+                <label for="username-login">Username</label>
+                <input type="text" id="username-login" />
+            </div>
+            <div>
+                <label for="password-login">Password</label>
+                <input type="password" id="password-login" />
+            </div>
+            <div>
+                <button type="submit">Login!</button>
+            </div>
+            <div>
+                <a href="/signup">Sign up instead</a>
+            </div>
         </div>
     </div>
 </form>
+
+<script src="/javascript/login.js"></script>
