--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
     <li>
         <div class="post">
             <div class="title">
-                <a href="" target="_blank">{{post.title}}</a>
+                <a href="/post/{{post.id}}">{{post.title}}</a>
                 <span>Posted by {{post.user.username}} on {{post.created_at}}</span>
             </div>
             <div class="post-content">
