--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,12 @@
         <nav>
             <a href="/" class="nav-links">Home</a>
             <a href="" class="nav-links">Dashboard</a>
-            <a href="/login" class="nav-links">Login</a>
+            
+            {{#if loggedIn}}
             <a href="" class="nav-links" id="logout">Logout</a>
+            {{else}}
+            <a href="/login" class="nav-links">Login</a>
+            {{/if}}
         </nav>
         <h1>Tech Blog</h1>
     </header>
@@ -23,7 +27,9 @@
         {{{ body }}}
     </main>
 
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    {{/if}}
 
 </body>
 
