--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,7 @@
 <ul class='post-list'>
     {{#each posts as |post|}}
     <li>
-        <div class="post">
-            <div class="title">
-                <a href="/post/{{post.id}}">{{post.title}}</a>
-                <span>Posted by {{post.user.username}} on {{post.created_at}}</span>
-            </div>
-            <div class="post-content">
-                {{post.content}}
-            </div>
-        </div>
+        {{> post-info post}}
     </li>
     {{/each}}
 </ul>
