--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,13 +1,4 @@
-<div class="post">
-    <div class="title">
-        <a href="">{{post.title}}</a>
-        <span>Posted by {{post.user.username}} on {{post.created_at}}</span>
-    </div>
-
-    <div class="post-content">
-        {{post.content}}
-    </div>  
-</div>
+{{> post-info post}}
 
 
 <div class="comments">
@@ -17,7 +8,7 @@
 
 
     <div class="title">
-      <span>{{user.username}} on {{created_at}}</span>
+      <span>{{user.username}} on {{format_date created_at}}</span>
     </div>
 
     <div class="comment-content">
